Add progressBar when page is loading.

--- a/application/src/main/webapp/page/global.css
+++ b/application/src/main/webapp/page/global.css
@@ -521,6 +521,36 @@ footer .icon img {
 }
 /*-- snackbar --*/
 
+/*--- loader ---*/
+#progressBar {
+    margin: 5% auto;
+    text-align: center;
+}
+
+.loader {
+    margin: auto;
+    border: 7px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 7px solid olivedrab;
+    width: 30px;
+    height: 30px;
+    -webkit-animation: spin 1s ease-in-out infinite;
+    -moz-animation: spin 1s ease-in-out infinite;
+    -o-animation: spin 1s ease-in-out infinite;
+    animation: spin 1s ease-in-out infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 /* phone version 手機版 */
 @media only screen and (max-device-width: 1024px) {
     body, html {
