--- a/admin/src/main/resources/webapp/dashboard.css
+++ b/admin/src/main/resources/webapp/dashboard.css
@@ -4,6 +4,16 @@
  * Copyright 2011-2017 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+
+
+td.productForm {
+ min-width: 150px;
+}
+
+td.receiver {
+    min-width: 100px;
+}
+
 :root {
     --blue: #007bff;
     --indigo: #6610f2;
