--- a/admin/src/main/resources/webapp/dashboard.css
+++ b/admin/src/main/resources/webapp/dashboard.css
@@ -38,7 +38,7 @@ body, html {
 }
 
 #id_content {
-    padding-top: 70px;
+    padding-top: 120px;
     padding-bottom: 50px;
 }
 
@@ -171,72 +171,8 @@ a.active {
     border-bottom: solid 1px;
 }
 
-#nav #cart, #nav #dropbtn {
-    color: black;
-    padding: 0;
-    height: 22px;
-}
-
-#nav #cart:hover, #nav .dropdown:hover #dropbtn {
-    background-color: white;
-    color: darkgrey;
-    padding-bottom: 5px;
-    border-bottom: solid 1px;
-    -webkit-transition: all 0.3s cubic-bezier(0.25, 0.1, 0.25, 0.1);
-    -moz-transition: all 0.3s cubic-bezier(0.25, 0.1, 0.25, 0.1);
-    -o-transition: all 0.3s cubic-bezier(0.25, 0.1, 0.25, 0.1);
-    transition: all 0.3s cubic-bezier(0.25, 0.1, 0.25, 0.1);
-}
-
-#nav .dropdown {
-    float: right;
-}
-
-#nav #cart.active, #nav #dropbtn.active {
-    color: black;
-    padding-bottom: 5px;
-    border-bottom: solid 1px;
-}
-
-#nav .dropdown-content {
-    display: none;
-    position: absolute;
-    margin-left: -1rem;
-    background-color: #f9f9f9;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    z-index: 999;
-}
-
-#nav .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 0.8rem 1rem;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-#nav .dropdown-content a:hover {
-    background-color: #ddd;
-    border-bottom: none;
-}
-
-#nav .dropdown:hover .dropdown-content {
-    display: block;
-}
-
-#nav #cart #cartNum {
-    background: olivedrab;
-    border-radius: 50%;
-    color: white;
-    font-size: 9px;
-    margin: 0;
-    font-weight: 900;
-    padding: 1px 3px;
-}
-
 .categories {
-    margin: 10px auto;
+    margin: 0;
     display: block;
 }
 
@@ -244,228 +180,73 @@ a.active {
     cursor: pointer;
     float: left;
     display: block;
-    color: #cccccc;
+    color: darkgray;
     text-align: center;
-    padding: 11px 14px;
+    padding: 5px 10px;
     text-decoration: none;
     border-right: solid 1px darkgray;
 }
 
-.categories li:last-child {
-    border-right: none;
+.categories li:first-child {
+    border-left: solid 1px darkgray;
 }
 
 .categories li:hover {
-    color: darkgrey;
+    color: black;
 }
 
-.categories li.active {
-    color: #777777;
-    border-bottom: solid darkgrey 1px;
+.categories li.active, .categories li:focus {
+    color: black;
+    border-bottom: solid darkgray 1px;
     text-shadow: #f2f2f2;
 }
 
-.categories li.active:hover {
-    background-color: transparent;
+#searchIcon {
+    opacity: 0.5;
+    padding: 0 10px 0 0;
 }
 
-#cart {
-    float: right;
-    display: block;
-    color: darkgray;
-    text-align: center;
-    padding: 14px 14px 4px 14px;
-    text-decoration: none;
+li:hover #searchIcon {
+    opacity: 1;
 }
 
-#cart:hover, .dropdown:hover #dropbtn:hover {
-    background-color: #777777;
-    color: #f2f2f2;
+#search {
+    margin: 10px 5%;
 }
 
-.dropdown {
-    float: right;
+button {
+    padding: 8px 10px;
 }
 
-.dropdown #dropbtn {
-    color: darkgray;
-    padding: 13px 14px;
-}
-
-#cart.active, #dropbtn.active {
+button:hover {
+    background-color: olivedrab;
     color: white;
+    box-shadow: 0 0 8px #cccccc;
+    outline: 0 none;
 }
 
-#cart.active:hover, #dropbtn.active:hover {
-    background-color: transparent;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    margin-left: -1rem;
-    background-color: #f9f9f9;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 0.8rem 1rem;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.banner {
-    padding: 3px;
-    text-align: center;
+button:active, button:focus {
+    background-color: olivedrab;
     color: white;
-    background: url("https://farm5.staticflickr.com/4492/37708014331_f25832e032_z.jpg") no-repeat center; //todo
-background-size: cover;
-    min-height: 80px;
-    letter-spacing: 10px;
+    outline: 0 none;
 }
 
-.banner h2 {
-    font-size: 36px;
-    opacity: 1;
-    line-height: 40px;
+input {
+    border: 1px solid darkgray;
+    font-size: 0.93rem;
+    padding: 7px 5px;
+    margin: 2px 0;
+    width: 220px;
 }
 
-.banner p {
-    font-size: 20px;
-    opacity: 1;
-    line-height: 20px;
+input:focus {
+    border-color: black;
+    box-shadow: 0 0 8px #cccccc;
+    outline: 0 none;
 }
 
-.bannerRight {
-    float: right;
-    padding: 30px;
-    margin: 10px 100px 10px 10px;
-    text-align: center;
-    color: white;
-    background: url("https://farm5.staticflickr.com/4492/37708014331_f25832e032_z.jpg") no-repeat center;
-    background-size: cover;
-    min-height: 300px;
-    max-height: 80%;
-    min-width: 30%;
-    letter-spacing: 10px;
-}
-
-/* -----  rotating banner  ----- */
-.slidesSection {
-    width: 60%;
-    min-height: 150px;
-    max-height: 200px;
-    display: block;
-    margin: 3.5rem auto 1.5rem;
-}
-
-.slidesSection img {
-    width: 100%;
-    max-height: 200px;
-}
-
-.slides {
-    display: none;
-}
-
-.fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-}
-
-@keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-}
-
-.dots {
-    text-align: center;
-    width: 100%;
-}
-
-.dot {
-    cursor:pointer;
-    height: 0.5rem;
-    width: 0.5rem;
-    margin: 0 0.15rem;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.dotActive, .dot:hover {
-    background-color: #717171;
-}
-/* --------------------------------- */
-
-.bannerRight h2 {
-    font-size: 36px;
-    opacity: 1;
-}
-
-.bannerRight p {
-    font-size: 20px;
-    opacity: 1;
-}
-
-footer .tab {
-    display: block;
-    text-align: center;
-    padding: 3rem 0;
-}
-
-footer .tab a {
-    margin-right: 15%;
-}
-
-footer .tab a:last-child {
-    margin-right: 0;
-}
-
-footer a, footer a:hover {
-    border-bottom: none;
-}
-
-footer .icon {
-    float: none;
-    clear: both;
-    display: block;
-    text-align: center;
-}
-
-footer .icon img {
-    width: 35px;
-    opacity: 0.4;
-    cursor: pointer;
-    margin: 2rem;
-}
-
-.footer-copyright {
-    clear: both;
-    letter-spacing: 2px;
-    text-align: center;
-    font-size: 0.7rem;
-    padding: 15px;
+input::placeholder {
+    color: #aaaaaa;
 }
 
 .formTitle {
@@ -478,6 +259,28 @@ footer .icon img {
     border-top: solid #cccccc 2px;
     width: 80%;
     margin-right: auto;
+}
+
+.table {
+    width: auto;
+    overflow: scroll;
+    text-align: center;
+}
+
+.table th {
+    min-width: 100px;
+}
+
+.table th#v0 {
+    min-width: 50px;
+}
+
+.table th#v2 {
+    min-width: 150px;
+}
+
+#orderForm tr {
+    border-bottom: solid olivedrab 1px;
 }
 
 /*-- snackbar --*/
@@ -552,35 +355,7 @@ footer .icon img {
     -o-animation: spin 1s ease-in-out infinite;
     animation: spin 1s ease-in-out infinite;
 }
-/*--------------*/
 
-/*-- fadein up animation --*/
-.fadeinUp {
-    visibility: visible !important;
-    -webkit-animation: fadeinUp 2s 0s cubic-bezier(0.165, 0.84, 0.44, 1) both;
-    -o-animation: fadeinUp 2s 0s cubic-bezier(0.165, 0.84, 0.44, 1) both;
-    animation: fadeinUp 2s 0s cubic-bezier(0.165, 0.84, 0.44, 1) both;
-}
-
-.hidden {
-    visibility: hidden;
-}
-
-@keyframes fadeinUp {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(45px) translateZ(0);
-        transform: translateY(45px) translateZ(0);
-    }
-    100% {
-        opacity: 1;
-        -webkit-transform: translateY(0) translateZ(0);
-        transform: translateY(0) translateZ(0);
-    }
-}
-/*---------------*/
-
-/* Safari */
 @-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
     100% { -webkit-transform: rotate(360deg); }
@@ -590,3 +365,4 @@ footer .icon img {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+/*--------------*/
