--- a/admin/src/main/resources/webapp/dashboard.css
+++ b/admin/src/main/resources/webapp/dashboard.css
@@ -211,7 +211,11 @@ li:hover #searchIcon {
 }
 
 #search {
-    margin: 10px 5%;
+    margin: 0;
+    right: 150px;
+    padding: 10px;
+    background-color: #e7e8ea;
+    position: fixed;
 }
 
 button {
@@ -366,3 +370,29 @@ input::placeholder {
     100% { transform: rotate(360deg); }
 }
 /*--------------*/
+
+/*-- fadein up animation --*/
+.fadeinDown {
+    visibility: visible !important;
+    -webkit-animation: fadeinDown 1s 0s cubic-bezier(0.165, 0.84, 0.44, 1) both;
+    -o-animation: fadeinDown 1s 0s cubic-bezier(0.165, 0.84, 0.44, 1) both;
+    animation: fadeinDown 1s 0s cubic-bezier(0.165, 0.84, 0.44, 1) both;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+@keyframes fadeinDown {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(-35px) translateZ(0);
+        transform: translateY(-35px) translateZ(0);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateY(0) translateZ(0);
+        transform: translateY(0) translateZ(0);
+    }
+}
+/*---------------*/
