--- a/admin/src/main/resources/webapp/dashboard.css
+++ b/admin/src/main/resources/webapp/dashboard.css
@@ -235,6 +235,31 @@ button:active, button:focus {
     outline: 0 none;
 }
 
+.floatingButton {
+    position: fixed;
+    bottom: 50px;
+    right: 90px;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    background-color: olivedrab;
+    color: white;
+    font-size: 35px;
+    text-align: center;
+    transition: 0.5s width ease, 0.5s height ease, 0.5s font-size ease, 0.3s box-shadow ease 0.4s;
+}
+
+.floatingButton:hover {
+    box-shadow: 2px 5px 10px 4px #cccccc;
+    width: 80px;
+    height: 80px;
+    font-size: 45px;
+    -webkit-animation: spinHalf 0.5s ease;
+    -moz-animation: spinHalf 0.5s ease;
+    -o-animation: spinHalf 0.5s ease;
+    animation: spinHalf 0.5s ease;
+}
+
 input {
     border: 1px solid darkgray;
     font-size: 0.93rem;
@@ -255,8 +280,8 @@ input::placeholder {
 
 .formTitle {
     margin-left: 50px;
-    margin-bottom: 0;
-    margin-top: 60px;
+    margin-bottom: 10px;
+    margin-top: 30px;
 }
 
 .borderLeft {
@@ -284,7 +309,7 @@ input::placeholder {
 }
 
 #orderForm tr {
-    border-bottom: solid olivedrab 1px;
+    outline: solid #e7e8ea 0.5px;
 }
 
 /*-- snackbar --*/
@@ -368,6 +393,17 @@ input::placeholder {
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+@keyframes spinHalf {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg);
+    }
 }
 /*--------------*/
 
