--- a/application/src/main/webapp/page/index.css
+++ b/application/src/main/webapp/page/index.css
@@ -4,6 +4,8 @@ body, html {
 
 #main {
     position: relative;
+    max-height: 440px;
+    min-height: 380px;
     width: 100vw;
     height: 80vh;
 }
@@ -36,8 +38,7 @@ body, html {
     top: 20%;
     left: 20%;
     width: 60%;
-    height: 30%;
-    min-width: 450px;
+    min-width: 550px;
 }
 
 .layer3 img {
@@ -85,6 +86,39 @@ body, html {
     text-align: center;
     font-size: 1.5rem;
     font-weight: 500;
+}
+
+@media (max-height: 530px) {
+    .layer3 img {
+        width: 90%;
+        height: 90%;
+        margin-left: 5%;
+    }
+}
+
+@media (min-width: 1100px) {
+    #main {
+        min-width: 800px;
+        min-height: 480px;
+    }
+
+    .layer3 {
+        min-width: 600px;
+    }
+
+    .layer3 img {
+        width: 90%;
+        height: 90%;
+        margin-left: 5%;
+        min-width: 600px;
+        min-height: 350px;
+    }
+}
+
+@media (min-width: 1300px) {
+    #main {
+        min-height: 530px;
+    }
 }
 
 /* phone version 手機版 */
