--- a/application/src/main/webapp/page/index.css
+++ b/application/src/main/webapp/page/index.css
@@ -126,6 +126,7 @@ body, html {
     #main {
         width: 100vw;
         height: 40vh;
+        max-height: none;
     }
 
     .layer1 {
@@ -140,7 +141,12 @@ body, html {
         top: 25%;
         left: 15%;
         width: 70%;
+        height: auto;
         min-width: 450px;
+    }
+
+    .layer3 img {
+        width: 100%;
     }
 
     .recommend {
