--- a/application/src/main/webapp/page/products.css
+++ b/application/src/main/webapp/page/products.css
@@ -34,7 +34,7 @@
 }
 
 .info b {
-    font-size: 1.03rem;
+    font-size: 1.2rem;
     letter-spacing: 0.14rem;
 }
 
@@ -45,6 +45,12 @@
 .originalPrice {
     text-decoration: line-through;
     text-decoration-color: #444444;
+}
+
+.priceHint {
+    letter-spacing: 2px;
+    font-size: 1.2rem;
+    color: olivedrab;
 }
 
 @media (max-width: 1200px) {
